package com.guide.portail.entity;

/** Les trois roles de l'application. */
public enum Role {
    ADMIN,
    MENTOR,
    ETUDIANT
}
