package com.guide.portail.entity;

public enum StatutProgression {
    NON_COMMENCE,
    EN_COURS,
    TERMINE
}
